syntax = "proto3";

option csharp_namespace = "UserService.Protos";

import "google/api/annotations.proto";

package user;

service UserAccountService {
	rpc RegisterUser (CreateUserRequest) returns (CreateUserResponse) {
		option (google.api.http) = {
			post: "/v1/accounts/register",
			body: "*"
		};
	};
	rpc Login (LoginRequest) returns (LoginResponse) {
		option (google.api.http) = {
			post: "/v1/accounts/login",
			body: "*"
		};
	};
	rpc GetUser (GetUserRequest) returns (GetUserResponse) {
		option (google.api.http) = {
			get: "/v1/accounts/email/{email}"
		};
	};
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
		option (google.api.http) = {
			put: "/v1/accounts",
			body: "*"
		};
	};
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
		option (google.api.http) = {
			delete: "/v1/accounts",
			body: "*"
		};
	};
	rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {
		option (google.api.http) = {
			post: "/v1/accounts/change-password",
			body: "*"
		};
	};
	rpc AssignAdminRole(AssignRoleRequest) returns (AssignRoleResponse) {
		option (google.api.http) = {
			post: "/v1/accounts/assign-admin-role",
			body: "*"
		};
	};

	rpc GetAllUsers (GetAllRequest) returns (GetAllResponse) {
		option (google.api.http) = {
			get: "/v1/accounts"
		};
	}

	rpc GetAllAdmins (GetAllRequest) returns (GetAdminResponse) {
		option (google.api.http) = {
			get: "/v1/accounts/admins"
		};
	}
}

message CreateUserRequest {
	string email = 1;
	string name = 2;
	string phoneNumber = 3;
	string password = 4;
}

message CreateUserResponse {
	string message = 1;
}

message LoginRequest {
	string email = 1;
	string password = 2;
}

message LoginResponse {
	string token = 1;
	string username = 2;
}

message GetUserRequest {
	string email = 1;
}

message GetUserResponse {
	string id = 1;
	string email = 2;
	string name = 3;
	string phoneNumber = 4;
	string username = 5;
}

message UpdateUserRequest {
	string name = 1;
	string phoneNumber = 2;
}

message UpdateUserResponse {
	string id = 1;
	string email = 2;
	string name = 3;
	string phoneNumber = 4;
	string username = 5;
}

message DeleteUserRequest {
	string username = 1;
}

message DeleteUserResponse {
	string response = 1;
}

message ChangePasswordRequest {
	string oldPassword = 1;
	string newPassword = 2;
	string confirmNewPassword = 3;
}

message ChangePasswordResponse {
	string response = 1;
}

message AssignRoleRequest {
	string email = 1;
}

message AssignRoleResponse {
	string response = 1;
}

message GetAllRequest {}

message GetAllResponse {
	repeated GetUserResponse users = 1;
}

message GetAdminResponse {
	repeated GetUserResponse admins = 1;
}